# orbit

./: .env.example  BACKEND_SETUP.md  COMPOSIO_GMAIL_SETUP.md  COMPOSIO_V3_API_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST.md  MANUAL_REFRESH_WORKFLOW.md  MIGRATION_TO_COMPOSIO.md  MULTI_SOURCE_INTEGRATION.md  PERSONALITY_SYSTEM.md  QUICK_START_MULTI_SOURCE.md  README.md  SPOTIFY_WORKFLOW.md  THEME_EXPANSION_ARCHITECTURE.md  TROUBLESHOOTING_MULTI_SOURCE.md  USAGE_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json
cal/themescope/: API_README.md  README.md  pyproject.toml  setup.cfg
cal/themescope/src/themescope/: api.py  api_server.py  cli.py  history.py  nlp.py  persona.py  utils.py
cal/themescope/src/themescope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cal/themescope_out/: subthemes.json  subthemes.md  themes.json  themes.md
public/: themescope_config.json  themescope_config.json.bak  themescope_config.sample.json
src/: App.tsx  index.css  index.ts  server.ts
src/components/: BouncingCow.tsx  ConnectionButton.tsx  LandingPage.tsx  OrbitSystem.tsx  Planet.tsx
src/data/: examplePersonality.ts
src/guidelines/: Guidelines.md
src/routes/: auth.ts  gmail.ts  health.ts  letta.ts  mcp.ts  spotify.ts  themes.ts
src/schemas/: consolidated.ts  gmail.ts  spotify.ts  themes.ts
src/services/: composio.ts  gmail_themes.ts  letta.ts  openai.ts  spotify.ts  spotify_themes.ts  theme_expander.ts  tokens.ts
src/styles/: globals.css
src/utils/: cors.ts  (+8 more)
(+1 files in other folders)
